@@ -47,9 +47,9 @@ DEF Script1 Script {
 
 function initialize ()
 {
-	global ();
-	browser ();
-	fields ();
+	//global ();
+	//browser ();
+	//fields ();
 }
 
 function global ()
@@ -93,13 +93,19 @@ function fields ()
 	var v;
 	print ('SFVec4f:             ', SFVec4f);
 	print ('SFVec4f .name:       ', SFVec4f .name);
-	//print ('SFVec4f .prototype:  ', SFVec4f .prototype);
-	//print ('SFVec4f .__proto__:  ', SFVec4f .__proto__);
+	print ('SFVec4f .prototype:  ', SFVec4f .prototype);
+	print ('SFVec4f .__proto__:  ', SFVec4f .__proto__);
+	print ('# SFVec4f .prototype:  ', SFVec4f .prototype === null);
+	print ('# SFVec4f .prototype:  ', SFVec4f .prototype instanceof SFVec4f);
+	print ('# SFVec4f .prototype:  ', typeof (SFVec4f .prototype));
+	print ('# SFVec4f .prototype:  ', SFVec4f .prototype .constructor);
+	print ('# SFVec4f .prototype:  ', SFVec4f .prototype .constructor .name);
 	print ('SFVec4f .new:        ', v = new SFVec4f ());
 	print ('SFVec4f .new:        ', v = new SFVec4f (1, 2, 3, 4));
 	print ('SFVec4f .instanceof: ', v instanceof SFVec4f);
-	//print ('SFVec4f .prototype:  ', v .prototype);
-	//print ('SFVec4f .__proto__:  ', v .__proto__);
+	print ('SFVec4f .prototype:  ', v .prototype);
+	print ('SFVec4f .__proto__:  ', v .__proto__);
+	print ('# SFVec4f .__proto__:  ', v .__proto__ === SFVec4f .prototype);
 	delete v .w;
 	print ('SFVec4f .x:          ', v .x);
 	print ('SFVec4f .y:          ', v .y);
@@ -155,7 +161,7 @@ DEF Script2 Script {
 
 function initialize ()
 {
-	var v = new SFVec4f ();
+	//var v = new SFVec4f ();
 }
 
 function set_time (value, time)
