@@ -1,20 +1,27 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Release" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/JavaScript/V8/Fields/v8SFVec4.h">
+  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey/Fields/jsSFVec4.h">
     <Files>
-      <File FileName="Library/Tests/Scripting/V8.x3dv" Line="108" Column="1" />
-      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/V8/v8X3DObject.h" Line="169" Column="23" />
-      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/V8/Fields/v8SFVec4.h" Line="151" Column="74" />
-      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/V8/Fields/v8SFVec4.cpp" Line="56" Column="1" />
-      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey/Fields/jsSFVec4.h" Line="117" Column="7" />
-      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/V8/v8Context.h" Line="112" Column="37" />
-      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/V8/v8Context.cpp" Line="162" Column="36" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey/jsContext.h" Line="230" Column="47" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey/jsContext.cpp" Line="416" Column="2" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey.cpp" Line="96" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey.h" Line="128" Column="1" />
+      <File FileName="Library/Tests/Scripting/V8.x3dv" Line="164" Column="4" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey/Fields/jsSFVec4.h" Line="138" Column="29" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
         <State expanded="True">
+          <Node name="build" expanded="True">
+            <Node name="debian" expanded="True" />
+          </Node>
           <Node name="experimental" expanded="True" />
           <Node name="Library" expanded="True">
+            <Node name="Examples" expanded="True">
+              <Node name="TreasureIsland" expanded="True">
+                <Node name="stage" expanded="True" />
+              </Node>
+            </Node>
             <Node name="Tests" expanded="True">
               <Node name="Scripting" expanded="True" />
             </Node>
@@ -22,9 +29,7 @@
           <Node name="libtitania-standard" expanded="True">
             <Node name="Titania" expanded="True">
               <Node name="Math" expanded="True">
-                <Node name="Numbers" expanded="True">
-                  <Node name="Vector2.h" selected="True" />
-                </Node>
+                <Node name="Geometry" expanded="True" />
               </Node>
             </Node>
           </Node>
@@ -37,30 +42,39 @@
             </Node>
             <Node name="Titania" expanded="True">
               <Node name="X3D" expanded="True">
+                <Node name="Base" expanded="True" />
                 <Node name="Basic" expanded="True" />
-                <Node name="Browser" expanded="True">
-                  <Node name="Scripting" expanded="True" />
-                </Node>
+                <Node name="Browser" expanded="True" />
                 <Node name="Components" expanded="True">
                   <Node name="Core" expanded="True" />
+                  <Node name="Followers" expanded="True" />
+                  <Node name="Grouping" expanded="True" />
+                  <Node name="Lighting" expanded="True" />
+                  <Node name="Rendering" expanded="True" />
                   <Node name="Scripting" expanded="True" />
                 </Node>
-                <Node name="Fields" expanded="True" />
                 <Node name="JavaScript" expanded="True">
                   <Node name="SpiderMonkey" expanded="True">
-                    <Node name="Fields" expanded="True" />
-                  </Node>
-                  <Node name="V8" expanded="True">
-                    <Node name="Fields" expanded="True" />
+                    <Node name="Fields" expanded="True">
+                      <Node name="jsSFVec4.h" selected="True" />
+                    </Node>
                   </Node>
                 </Node>
-                <Node name="Parser" expanded="True" />
               </Node>
             </Node>
           </Node>
           <Node name="Titania" expanded="True">
+            <Node name="share" expanded="True">
+              <Node name="titania" expanded="True">
+                <Node name="ui" expanded="True" />
+              </Node>
+            </Node>
             <Node name="Titania" expanded="True">
               <Node name="Browser" expanded="True" />
+              <Node name="Console" expanded="True" />
+              <Node name="HistoryEditor" expanded="True" />
+              <Node name="LibraryView" expanded="True" />
+              <Node name="OutlineEditor" expanded="True" />
             </Node>
           </Node>
         </State>
