@@ -1,3 +1,7 @@
+2014-06-07  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* V8.x3dv: 
+
 2014-06-06  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* test.wrl: 
