@@ -1,3 +1,9 @@
+2014-06-07  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DScriptingContext.h:
+	* jsSFVec4.h:
+	* TextureCoordinateGenerator.cpp: 
+
 2014-06-06  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DBaseNode.h:
